# USA_Forecast

./: .gitignore  README.md  __main__.py  demo.py  pyproject.toml  setup.py  test.py
src/usa_forecast/: usa_forecast_code.py
src/usa_forecast/aux_functions/: open_browser_code.py  save_read_csv_excel.py
src/usa_forecast/calculations/: build_forecast_summary_table.py  lags_adding.py  price_calculations.py
src/usa_forecast/config_handlers/: configurator_interface.py  excel_configurator.py
src/usa_forecast/dashboard/: app_callback.py
src/usa_forecast/dashboard/callbacks/: front_callback.py  heatmap_callback.py  plot_callback.py  stock_analysis_callback.py  target_price_table_callback.py
src/usa_forecast/dashboard/dash_components/: navigation.py
src/usa_forecast/dashboard/layouts/: front_layout.py  heatmap_layout.py  plot_layout.py  stock_analysis_layout.py  target_price_table_layout.py
src/usa_forecast/data_download/: fmp_mkt_data.py
src/usa_forecast/entities/: configuration.py
src/usa_forecast/exceptions/: __init__.py  exceptions.py
src/usa_forecast/plotting/: candlestick_plotly.py
src/usa_forecast/services/: historical_analysis.py  update_logic.py
